<resources>
    <string name="app_name">I-Fish App</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Spinners -->
    <string name="spinner_title">spinner_title</string>

    <!-- Radio Button  -->
    <string name="radio_alb">ALB</string>
    <string name="radio_bet">BET</string>
    <string name="radio_skj">SKJ</string>
    <string name="radio_yft">YFT</string>

</resources>
