<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop ="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:text="Species" />

        <RadioGroup
            android:id="@+id/radioGroupSpecies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true" >

            <RadioButton
                android:id="@+id/radioALB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/radio_alb" />

            <RadioButton
                android:id="@+id/radioBET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/radio_bet" />

            <RadioButton
                android:id="@+id/radioYFT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:checked="true"
                android:text="@string/radio_yft" />

        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Kode" />

        <Spinner
            android:id="@+id/kode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_title"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Berat (Kg)" />

        <EditText
            android:id="@+id/editBerat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Panjang (Cm)" />

        <EditText
            android:id="@+id/editPanjang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|none"
            android:maxLength="20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Loin Berat (Kg)" />

        <EditText
            android:id="@+id/editLoinBerat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Loin Panjang (Cm)" />

        <EditText
            android:id="@+id/editLoinPanjang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|none"
            android:maxLength="20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Insang" />

        <Spinner
            android:id="@+id/insang"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_title"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Perut" />

        <Spinner
            android:id="@+id/perut"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_title"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            />

        <TextView
            android:id="@+id/txtDagingPerut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Daging Perut" />

        <Spinner
            android:id="@+id/dagingPerut"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_title"
            android:layout_marginTop="20dip"
            android:layout_marginLeft="8dip"
            android:layout_marginRight="8dip"
            />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/borderlessButtonStyle"
            android:drawableLeft="@mipmap/ic_add"
            android:text="Save"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
